force-app/main/default/objects/User/fields/Active_Inquiries__c.field-meta.xml
<CustomField>
    <fullName>Active_Inquiries__c</fullName>
    <description>This is the count of active Inquiries owned by this agent</description>
    <inlineHelpText>This is the count of active Inquiries owned by this agent</inlineHelpText>
    <label>#Active Inquiries</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>