force-app/main/default/objects/User/fields/Agent_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Agent_Image_URL__c</fullName>
    <label>Agent Image URL</label>
    <type>Url</type>
</CustomField>