force-app/main/default/objects/User/fields/Agent_on_Leave__c.field-meta.xml
<CustomField>
    <fullName>Agent_on_Leave__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agent on Leave</label>
    <type>Checkbox</type>
</CustomField>