force-app/main/default/objects/User/fields/Agent_Template_Photo__c.field-meta.xml
<CustomField>
    <fullName>Agent_Template_Photo__c</fullName>
    <label>Agent Template Photo</label>
    <type>Url</type>
</CustomField>