force-app/main/default/objects/User/fields/Al_Barari__c.field-meta.xml
<CustomField>
    <fullName>Al_Barari__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This agent can be assigned Inquiries in the Al Barari area</inlineHelpText>
    <label>Al Barari</label>
    <type>Checkbox</type>
</CustomField>