force-app/main/default/objects/User/fields/Bulgary_Jumeirah_Bay_Jumeirah__c.field-meta.xml
<CustomField>
    <fullName>Bulgary_Jumeirah_Bay_Jumeirah__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This agent can be assigned Inquiries in the Bulgary/Jumeirah Bay/Jumeirah area</inlineHelpText>
    <label>Bulgary/Jumeirah Bay/Jumeirah</label>
    <type>Checkbox</type>
</CustomField>