force-app/main/default/objects/User/fields/Clean_mobile_phone__c.field-meta.xml
<CustomField>
    <fullName>Clean_mobile_phone__c</fullName>
    <formula>IF ( Contains( MobilePhone , &apos; &apos; ), SUBSTITUTE( MobilePhone , &quot; &quot;, &quot;&quot; ), 
IF ( Contains( MobilePhone  , &apos;+&apos; ), SUBSTITUTE( MobilePhone , &quot;+&quot;, &quot;&quot; ), MobilePhone ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clean mobile phone</label>
    <type>Text</type>
</CustomField>