force-app/main/default/objects/User/fields/Company_Staff_GUID__c.field-meta.xml
<CustomField>
    <fullName>Company_Staff_GUID__c</fullName>
    <description>for SIR Listing GUID</description>
    <label>Company Staff GUID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>