force-app/main/default/objects/User/fields/DIFC__c.field-meta.xml
<CustomField>
    <fullName>DIFC__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This agent can be assigned Inquiries in the DIFC area</inlineHelpText>
    <label>DIFC</label>
    <type>Checkbox</type>
</CustomField>