force-app/main/default/objects/User/fields/Downtown__c.field-meta.xml
<CustomField>
    <fullName>Downtown__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This agent can be assigned Inquiries in the Downtown area</inlineHelpText>
    <label>Downtown</label>
    <type>Checkbox</type>
</CustomField>