force-app/main/default/objects/User/fields/Dubai_Hills__c.field-meta.xml
<CustomField>
    <fullName>Dubai_Hills__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This agent can be assigned Inquiries in the Dubai Hills area</inlineHelpText>
    <label>Dubai Hills</label>
    <type>Checkbox</type>
</CustomField>