force-app/main/default/objects/User/fields/Dubailand__c.field-meta.xml
<CustomField>
    <fullName>Dubailand__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This agent can be assigned Inquiries in the Dubailand area</inlineHelpText>
    <label>Dubailand</label>
    <type>Checkbox</type>
</CustomField>