force-app/main/default/objects/User/fields/Dubizzle_Phone__c.field-meta.xml
<CustomField>
    <fullName>Dubizzle_Phone__c</fullName>
    <label>Dubizzle Phone</label>
    <type>Phone</type>
</CustomField>