force-app/main/default/objects/User/fields/Emirates_Hills__c.field-meta.xml
<CustomField>
    <fullName>Emirates_Hills__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This agent can be assigned Inquiries in the Emirates Hills area</inlineHelpText>
    <label>Emirates Hills</label>
    <type>Checkbox</type>
</CustomField>