force-app/main/default/objects/User/fields/gsir_brn__c.field-meta.xml
<CustomField>
    <fullName>gsir_brn__c</fullName>
    <label>BRN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>