force-app/main/default/objects/User/fields/gsir_company__c.field-meta.xml
<CustomField>
    <fullName>gsir_company__c</fullName>
    <label>Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gulf Sotheby&apos;s</fullName>
            </value>
            <value>
                <fullName>Saudi Arabia</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>Clark &amp; Scott</fullName>
                <isActive>false</isActive>
                <label>Clark &amp; Scott</label>
            </value>
            <value>
                <fullName>External Brokers</fullName>
                <isActive>false</isActive>
                <label>External Brokers</label>
            </value>
            <value>
                <fullName>Internal Brokers</fullName>
                <isActive>false</isActive>
                <label>Internal Brokers</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>