force-app/main/default/objects/User/fields/gsir_company_initials__c.field-meta.xml
<CustomField>
    <fullName>gsir_company_initials__c</fullName>
    <description>Used to Create Auto generated broker reference ID</description>
    <label>Company Initials</label>
    <length>2</length>
    <type>Text</type>
</CustomField>