force-app/main/default/objects/User/fields/Inventory_Access__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Access__c</fullName>
    <formula>IF(
Profile.Name == &apos;DP_AGENT&apos;|| Profile.Name == &apos;PB Agent&apos;|| Profile.Name == &apos;Saudi Arabia - Agents&apos;  	
, &apos;Agent&apos;, 
IF(Profile.Name == &apos;Saudi Arabia Sales Management&apos;	 
, &apos;Manager&apos;,&apos;&apos;)
)</formula>
    <label>Inventory Access</label>
    <type>Text</type>
</CustomField>