force-app/main/default/objects/User/fields/JumPark_JumIslands_Meadows__c.field-meta.xml
<CustomField>
    <fullName>JumPark_JumIslands_Meadows__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This agent can be assigned Inquiries in the JumPark / JumIslands / Meadows area</inlineHelpText>
    <label>JumPark / JumIslands / Meadows</label>
    <type>Checkbox</type>
</CustomField>