force-app/main/default/objects/User/fields/Legal_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Company_Name__c</fullName>
    <label>Legal Company Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UK Sothebys International Realty</fullName>
            </value>
            <value>
                <fullName>SIR Real estate LLC</fullName>
            </value>
            <value>
                <fullName>Lux Arabia for Real Estate</fullName>
            </value>
            <value>
                <fullName>Prime Realty Real Estate LLC</fullName>
            </value>
            <value>
                <fullName>One Conveyancing Documents clearing LLC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>