force-app/main/default/objects/User/fields/Listing_Manager__c.field-meta.xml
<CustomField>
    <fullName>Listing_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User is allowed to fully manage listings (publish to portals)</description>
    <inlineHelpText>User is allowed to fully manage listings (publish to portals)</inlineHelpText>
    <label>Listing Manager</label>
    <type>Checkbox</type>
</CustomField>