force-app/main/default/objects/User/fields/ListingAgentName__c.field-meta.xml
<CustomField>
    <fullName>ListingAgentName__c</fullName>
    <formula>FirstName &amp;&quot; &quot;&amp; LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Agent Name</label>
    <type>Text</type>
</CustomField>