force-app/main/default/objects/User/fields/Marina_JBR_Bluewaters__c.field-meta.xml
<CustomField>
    <fullName>Marina_JBR_Bluewaters__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This agent can be assigned Inquiries in the Marina / JBR / Bluewaters/ area</inlineHelpText>
    <label>Marina / JBR / Bluewaters/</label>
    <type>Checkbox</type>
</CustomField>