force-app/main/default/objects/User/fields/Meydan_MBR_city__c.field-meta.xml
<CustomField>
    <fullName>Meydan_MBR_city__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This agent can be assigned Inquiries in the Meydan/MBR City area</inlineHelpText>
    <label>Meydan/MBR city</label>
    <type>Checkbox</type>
</CustomField>