force-app/main/default/objects/User/fields/Office_Location__c.field-meta.xml
<CustomField>
    <fullName>Office_Location__c</fullName>
    <label>Office Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dubai Sotheby&apos;s International Realty</fullName>
            </value>
            <value>
                <fullName>Dubai Sotheby&apos;s International Realty - Exclusive Projects</fullName>
            </value>
            <value>
                <fullName>Saudi Arabia Sotheby&apos;s International Realty</fullName>
            </value>
            <value>
                <fullName>48 Conduit Street, London, W1S 2YR</fullName>
            </value>
            <value>
                <fullName>One Conveyancing</fullName>
            </value>
            <value>
                <fullName>AKW Consultants</fullName>
            </value>
            <value>
                <fullName>United Kingdom Sotheby&apos;s International Realty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>