force-app/main/default/objects/User/fields/Palm_Apartments__c.field-meta.xml
<CustomField>
    <fullName>Palm_Apartments__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This agent can be assigned Palm Apartments Inquiries</inlineHelpText>
    <label>Palm Apartments</label>
    <type>Checkbox</type>
</CustomField>