force-app/main/default/objects/User/fields/Palm_Jumeirah_Villas__c.field-meta.xml
<CustomField>
    <fullName>Palm_Jumeirah_Villas__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This agent can ba assigned Palm Jumeirah Villas</inlineHelpText>
    <label>Palm Jumeirah Villas</label>
    <type>Checkbox</type>
</CustomField>