force-app/main/default/objects/User/fields/pba__ActiveRainURL__c.field-meta.xml
<CustomField>
    <fullName>pba__ActiveRainURL__c</fullName>
    <description>ActiveRain URL</description>
    <label>ActiveRain URL</label>
    <type>Url</type>
</CustomField>