force-app/main/default/objects/User/fields/pba__AgentHighlight_pb__c.field-meta.xml
<CustomField>
    <fullName>pba__AgentHighlight_pb__c</fullName>
    <label>Agent Highlight</label>
    <length>65535</length>
    <type>Html</type>
</CustomField>