force-app/main/default/objects/User/fields/pba__AutoAssignable__c.field-meta.xml
<CustomField>
    <fullName>pba__AutoAssignable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Agent is in Round Robin queue for lead distribution</description>
    <label>Auto Assignable</label>
    <type>Checkbox</type>
</CustomField>