force-app/main/default/objects/User/fields/pba__Bio_pb__c.field-meta.xml
<CustomField>
    <fullName>pba__Bio_pb__c</fullName>
    <label>User Bio</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>