force-app/main/default/objects/User/fields/pba__BlogURL__c.field-meta.xml
<CustomField>
    <fullName>pba__BlogURL__c</fullName>
    <description>Blog URL</description>
    <label>Blog URL</label>
    <type>Url</type>
</CustomField>