force-app/main/default/objects/User/fields/pba__Certifications__c.field-meta.xml
<CustomField>
    <fullName>pba__Certifications__c</fullName>
    <label>Certifications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accredited Buyer&apos;s Representative®</fullName>
            </value>
            <value>
                <fullName>At Home With Diversity®</fullName>
            </value>
            <value>
                <fullName>Accredited Land Consultant</fullName>
            </value>
            <value>
                <fullName>Certified Commercial Investment Member</fullName>
            </value>
            <value>
                <fullName>Certified International Property Specialist</fullName>
            </value>
            <value>
                <fullName>Certified Property Manager®</fullName>
            </value>
            <value>
                <fullName>Certified Real Estate Brokerage Manager</fullName>
            </value>
            <value>
                <fullName>Certified Real Estate Team Specialist</fullName>
            </value>
            <value>
                <fullName>Certified Residential Specialist</fullName>
            </value>
            <value>
                <fullName>Counselor of Real Estate®</fullName>
            </value>
            <value>
                <fullName>e-PRO®</fullName>
            </value>
            <value>
                <fullName>General Accredited Appraiser</fullName>
            </value>
            <value>
                <fullName>NAR&apos;s Green Designation</fullName>
            </value>
            <value>
                <fullName>Graduate, REALTOR® Institute</fullName>
            </value>
            <value>
                <fullName>Military Relocation Professional</fullName>
            </value>
            <value>
                <fullName>Performance Management Network</fullName>
            </value>
            <value>
                <fullName>Pricing Strategy Advisor</fullName>
            </value>
            <value>
                <fullName>Residential Accredited Appraiser</fullName>
            </value>
            <value>
                <fullName>REALTOR® Association Certified Executive</fullName>
            </value>
            <value>
                <fullName>Real Estate Negotiation Expert</fullName>
            </value>
            <value>
                <fullName>Resort &amp; Second-Home Property Specialist</fullName>
            </value>
            <value>
                <fullName>Short Sales &amp; Foreclosure Resource®</fullName>
            </value>
            <value>
                <fullName>Seller Representative Specialist</fullName>
            </value>
            <value>
                <fullName>Society of Industrial and Office REALTORS®</fullName>
            </value>
            <value>
                <fullName>Seniors Real Estate Specialist®</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>