force-app/main/default/objects/User/fields/pba__DisplayOnWebsite__c.field-meta.xml
<CustomField>
    <fullName>pba__DisplayOnWebsite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the agent is displayed on the website or not</description>
    <label>Display On Website</label>
    <type>Checkbox</type>
</CustomField>