force-app/main/default/objects/User/fields/pba__DisplayPropertiesOnWebsite__c.field-meta.xml
<CustomField>
    <fullName>pba__DisplayPropertiesOnWebsite__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Display MLS active properties on profile</description>
    <label>Display Properties on Website</label>
    <type>Checkbox</type>
</CustomField>