force-app/main/default/objects/User/fields/pba__EmergencyContactName_pb__c.field-meta.xml
<CustomField>
    <fullName>pba__EmergencyContactName_pb__c</fullName>
    <label>Emergency Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>