force-app/main/default/objects/User/fields/pba__EmergencyContactPhone_pb__c.field-meta.xml
<CustomField>
    <fullName>pba__EmergencyContactPhone_pb__c</fullName>
    <label>Emergency Contact Phone</label>
    <type>Phone</type>
</CustomField>