force-app/main/default/objects/User/fields/pba__EndDate_pb__c.field-meta.xml
<CustomField>
    <fullName>pba__EndDate_pb__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>