force-app/main/default/objects/User/fields/pba__FacebookURL__c.field-meta.xml
<CustomField>
    <fullName>pba__FacebookURL__c</fullName>
    <description>Facebook URL</description>
    <label>Facebook URL</label>
    <type>Url</type>
</CustomField>