force-app/main/default/objects/User/fields/pba__FaxNumber__c.field-meta.xml
<CustomField>
    <fullName>pba__FaxNumber__c</fullName>
    <label>Fax Extension</label>
    <type>Phone</type>
</CustomField>