force-app/main/default/objects/User/fields/pba__FlickrURL__c.field-meta.xml
<CustomField>
    <fullName>pba__FlickrURL__c</fullName>
    <description>Flickr URL</description>
    <label>Flickr URL</label>
    <type>Url</type>
</CustomField>