force-app/main/default/objects/User/fields/pba__FoursquareURL__c.field-meta.xml
<CustomField>
    <fullName>pba__FoursquareURL__c</fullName>
    <description>Foursquare URL</description>
    <label>Foursquare URL</label>
    <type>Url</type>
</CustomField>