force-app/main/default/objects/User/fields/pba__FrequencyCDays_pb__c.field-meta.xml
<CustomField>
    <fullName>pba__FrequencyCDays_pb__c</fullName>
    <label>Frequency C (in Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>