force-app/main/default/objects/User/fields/pba__HasOptedInToTextMessages__c.field-meta.xml
<CustomField>
    <fullName>pba__HasOptedInToTextMessages__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, the mobile number above has consented to receive text messages from Propertybase.</inlineHelpText>
    <label>Text Message Opt In</label>
    <type>Checkbox</type>
</CustomField>