force-app/main/default/objects/User/fields/pba__InstagramURL__c.field-meta.xml
<CustomField>
    <fullName>pba__InstagramURL__c</fullName>
    <description>Instagram URL</description>
    <label>Instagram URL</label>
    <type>Url</type>
</CustomField>