force-app/main/default/objects/User/fields/pba__Is_PropertyBase_User__c.field-meta.xml
<CustomField>
    <fullName>pba__Is_PropertyBase_User__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is PropertyBase User</label>
    <type>Checkbox</type>
</CustomField>