force-app/main/default/objects/User/fields/pba__LeadRoutingDisabledByAdmin__c.field-meta.xml
<CustomField>
    <fullName>pba__LeadRoutingDisabledByAdmin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Routing Disabled (By Admin)</label>
    <type>Checkbox</type>
</CustomField>