force-app/main/default/objects/User/fields/pba__LeadRoutingDisabledByUser__c.field-meta.xml
<CustomField>
    <fullName>pba__LeadRoutingDisabledByUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Routing Disabled (By User)</label>
    <type>Checkbox</type>
</CustomField>