force-app/main/default/objects/User/fields/pba__LicenseDate_pb__c.field-meta.xml
<CustomField>
    <fullName>pba__LicenseDate_pb__c</fullName>
    <description>License Date</description>
    <label>License Date</label>
    <type>Date</type>
</CustomField>