force-app/main/default/objects/User/fields/pba__LicenseExpirationDate_pb__c.field-meta.xml
<CustomField>
    <fullName>pba__LicenseExpirationDate_pb__c</fullName>
    <label>License Expiration Date</label>
    <type>Date</type>
</CustomField>