force-app/main/default/objects/User/fields/pba__LicenseNumber2__c.field-meta.xml
<CustomField>
    <fullName>pba__LicenseNumber2__c</fullName>
    <label>License Number 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>