force-app/main/default/objects/User/fields/pba__LicenseNumber__c.field-meta.xml
<CustomField>
    <fullName>pba__LicenseNumber__c</fullName>
    <description>License Number</description>
    <label>License Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>