force-app/main/default/objects/User/fields/pba__LinkedinURL__c.field-meta.xml
<CustomField>
    <fullName>pba__LinkedinURL__c</fullName>
    <description>Linkedin URL</description>
    <label>Linkedin URL</label>
    <type>Url</type>
</CustomField>