force-app/main/default/objects/User/fields/pba__MLS1Code__c.field-meta.xml
<CustomField>
    <fullName>pba__MLS1Code__c</fullName>
    <label>Available MLS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>abor</fullName>
                <label>Austin Board of Realtors MLS</label>
            </value>
            <value>
                <fullName>amelia_island</fullName>
                <label>Amelia Island MLS</label>
            </value>
            <value>
                <fullName>agsmls</fullName>
                <label>Aspen Glenwood Springs MLS</label>
            </value>
            <value>
                <fullName>bareis</fullName>
                <label>Bay Area Real Estate Info Services</label>
            </value>
            <value>
                <fullName>bear</fullName>
                <label>Bonita Springs-Estero Association of Realtors MLS</label>
            </value>
            <value>
                <fullName>bnar</fullName>
                <label>Bloomington-Normal MLS</label>
            </value>
            <value>
                <fullName>rapb</fullName>
                <label>Beaches MLS</label>
            </value>
            <value>
                <fullName>beaufort</fullName>
                <label>Beaufort County MLS</label>
            </value>
            <value>
                <fullName>cbor</fullName>
                <label>Columbus MLS</label>
            </value>
            <value>
                <fullName>cireb</fullName>
                <label>Commercial and Industrial Real Estate Brokers, Inc.</label>
            </value>
            <value>
                <fullName>claw</fullName>
                <label>Combined Los Angeles/Westside MLS</label>
            </value>
            <value>
                <fullName>crisnet</fullName>
                <label>CRISNet</label>
            </value>
            <value>
                <fullName>crmls</fullName>
                <label>California Regional Multiple Listing Service</label>
            </value>
            <value>
                <fullName>ctmls</fullName>
                <label>Connecticut MLS</label>
            </value>
            <value>
                <fullName>cvrmls</fullName>
                <label>Central Virginia Regional MLS</label>
            </value>
            <value>
                <fullName>ccimls</fullName>
                <label>Cape Cod &amp; Islands MLS</label>
            </value>
            <value>
                <fullName>capecoral</fullName>
                <label>Cape Coral</label>
            </value>
            <value>
                <fullName>coeurdalene</fullName>
                <label>Coeur d&apos;Alene MLS</label>
            </value>
            <value>
                <fullName>commercial_brokers_association</fullName>
                <label>Commercial Brokers Association</label>
            </value>
            <value>
                <fullName>elmira_corning</fullName>
                <label>Elmira-Corning MLS</label>
            </value>
            <value>
                <fullName>fayetteville</fullName>
                <label>Fayetteville MLS</label>
            </value>
            <value>
                <fullName>firstmls</fullName>
                <label>First MLS</label>
            </value>
            <value>
                <fullName>garden_state_mls</fullName>
                <label>Garden State MLS</label>
            </value>
            <value>
                <fullName>georgia</fullName>
                <label>Georgia MLS</label>
            </value>
            <value>
                <fullName>golden_isles</fullName>
                <label>Golden Isles MLS</label>
            </value>
            <value>
                <fullName>greater_binghamton</fullName>
                <label>Greater Binghamton MLS</label>
            </value>
            <value>
                <fullName>greater_scranton</fullName>
                <label>Greater Scranton MLS</label>
            </value>
            <value>
                <fullName>hilton_head</fullName>
                <label>Hilton Head MLS</label>
            </value>
            <value>
                <fullName>hgmls</fullName>
                <label>Hudson Gateway MLS</label>
            </value>
            <value>
                <fullName>itech</fullName>
                <label>iTech</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>