force-app/main/default/objects/User/fields/pba__MLS1Id__c.field-meta.xml
<CustomField>
    <fullName>pba__MLS1Id__c</fullName>
    <label>ID of the MLS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>