force-app/main/default/objects/User/fields/pba__NARRealtor__c.field-meta.xml
<CustomField>
    <fullName>pba__NARRealtor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Agent is a NAR Realtor</description>
    <label>NAR Realtor</label>
    <type>Checkbox</type>
</CustomField>