force-app/main/default/objects/User/fields/pba__NewLeadDays_pb__c.field-meta.xml
<CustomField>
    <fullName>pba__NewLeadDays_pb__c</fullName>
    <label>New Lead Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>