force-app/main/default/objects/User/fields/pba__PinterestURL__c.field-meta.xml
<CustomField>
    <fullName>pba__PinterestURL__c</fullName>
    <description>Pinterest URL</description>
    <label>Pinterest URL</label>
    <type>Url</type>
</CustomField>