force-app/main/default/objects/User/fields/pba__PlaxoURL__c.field-meta.xml
<CustomField>
    <fullName>pba__PlaxoURL__c</fullName>
    <description>Plaxo URL</description>
    <label>Plaxo URL</label>
    <type>Url</type>
</CustomField>