force-app/main/default/objects/User/fields/pba__ProfilePhotoURL__c.field-meta.xml
<CustomField>
    <fullName>pba__ProfilePhotoURL__c</fullName>
    <description>URL for photo</description>
    <label>Profile Photo URL</label>
    <type>Url</type>
</CustomField>