force-app/main/default/objects/User/fields/pba__PropertybaseId__c.field-meta.xml
<CustomField>
    <fullName>pba__PropertybaseId__c</fullName>
    <description>If set, the User has registered with Propertybase and this is the ID.</description>
    <inlineHelpText>System field. Do not expose this field to any user. This field must not be changed manually.</inlineHelpText>
    <label>Propertybase ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>