force-app/main/default/objects/User/fields/pba__PropertybasePhone__c.field-meta.xml
<CustomField>
    <fullName>pba__PropertybasePhone__c</fullName>
    <label>Propertybase Phone</label>
    <type>Phone</type>
</CustomField>