force-app/main/default/objects/User/fields/pba__SpokenLanguages__c.field-meta.xml
<CustomField>
    <fullName>pba__SpokenLanguages__c</fullName>
    <label>Spoken Languages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Afrikaans</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Albanian</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Arabic</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>American Sign Language</label>
            </value>
            <value>
                <fullName>82</fullName>
                <label>Arin</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Armenian</label>
            </value>
            <value>
                <fullName>83</fullName>
                <label>Azerbaijani</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Basque</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Bengali</label>
            </value>
            <value>
                <fullName>85</fullName>
                <label>Bosnian</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Bulgarian</label>
            </value>
            <value>
                <fullName>98</fullName>
                <label>Burmese</label>
            </value>
            <value>
                <fullName>78</fullName>
                <label>Cape Verdean</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Catalan</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Cambodian</label>
            </value>
            <value>
                <fullName>81</fullName>
                <label>Cantonese</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Chinese</label>
            </value>
            <value>
                <fullName>77</fullName>
                <label>Creole</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Croatian</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Czech</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Danish</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Dutch</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>English</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>Estonian</label>
            </value>
            <value>
                <fullName>80</fullName>
                <label>Farsi</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Fiji</label>
            </value>
            <value>
                <fullName>92</fullName>
                <label>Filipino</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>Finnish</label>
            </value>
            <value>
                <fullName>93</fullName>
                <label>Flemish</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>French</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>