force-app/main/default/objects/User/fields/pba__StartDate_pb__c.field-meta.xml
<CustomField>
    <fullName>pba__StartDate_pb__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>