force-app/main/default/objects/User/fields/pba__TumblrURL__c.field-meta.xml
<CustomField>
    <fullName>pba__TumblrURL__c</fullName>
    <description>Tumblr URL</description>
    <label>Tumblr URL</label>
    <type>Url</type>
</CustomField>