force-app/main/default/objects/User/fields/pba__TwitterURL__c.field-meta.xml
<CustomField>
    <fullName>pba__TwitterURL__c</fullName>
    <description>Twitter URL</description>
    <label>Twitter URL</label>
    <type>Url</type>
</CustomField>