force-app/main/default/objects/User/fields/pba__VimeoURL__c.field-meta.xml
<CustomField>
    <fullName>pba__VimeoURL__c</fullName>
    <description>Vimeo URL</description>
    <label>Vimeo URL</label>
    <type>Url</type>
</CustomField>