force-app/main/default/objects/User/fields/pba__WebsiteRole__c.field-meta.xml
<CustomField>
    <fullName>pba__WebsiteRole__c</fullName>
    <label>Website Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>no_sync</fullName>
                <default>true</default>
                <label>No Sync</label>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>