force-app/main/default/objects/User/fields/pba__WebsiteURL__c.field-meta.xml
<CustomField>
    <fullName>pba__WebsiteURL__c</fullName>
    <description>Website URL</description>
    <label>Website URL</label>
    <type>Url</type>
</CustomField>