force-app/main/default/objects/User/fields/pba__YelpURL__c.field-meta.xml
<CustomField>
    <fullName>pba__YelpURL__c</fullName>
    <description>Yelp URL</description>
    <label>Yelp URL</label>
    <type>Url</type>
</CustomField>