force-app/main/default/objects/User/fields/pba__YoutubeURL__c.field-meta.xml
<CustomField>
    <fullName>pba__YoutubeURL__c</fullName>
    <description>Youtube URL</description>
    <label>Youtube URL</label>
    <type>Url</type>
</CustomField>